--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       >
         <!-- Logo -->
         <a href="/" class="flex items-center">
-          <img src="/img/logo.png" alt="logo" class="w-[60px]" />
+          <img src="/img/image.png" alt="logo" class="w-[60px]" />
           <span class="ml-2 text-xl font-semibold">Blaze Store</span>
         </a>
         <!-- Navigation Menu -->
