--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       >
         <!-- Logo -->
         <a href="/" class="flex items-center">
-          <img src="/img/DBTP1.png" alt="logo" class="w-[60px]" />
+          <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/logo.png" alt="logo" class="w-[60px]" />
           <span class="ml-2 text-xl font-semibold">Blaze Store</span>
         </a>
         <!-- Navigation Menu -->
@@ -73,7 +73,7 @@
                 aria-expanded="true"
                 aria-haspopup="true"
               >
-                <img src="/img/en.png" alt="English" class="w-5 h-5 mr-2" />
+                <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/en.png" alt="English" class="w-5 h-5 mr-2" />
                 EN
               </button>
             </div>
@@ -92,7 +92,7 @@
                   class="flex items-center px-4 py-2 text-sm text-gray-300 border-b-2 border-b-gray-700 hover:border-b-gray-500 hover:bg-gray-600"
                   role="menuitem"
                 >
-                  <img src="/img/en.png" alt="English" class="w-5 h-5 mr-2" />
+                  <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/en.png" alt="English" class="w-5 h-5 mr-2" />
                   English <i class="bi bi-check-lg ml-6"></i>
                 </a>
                 <a
@@ -100,7 +100,7 @@
                   class="flex items-center px-4 py-2 text-sm text-white border-b-2 border-b-gray-700 hover:border-b-gray-500 hover:bg-gray-600"
                   role="menuitem"
                 >
-                  <img src="/img/kh.png" alt="Khmer" class="w-5 h-5 mr-2" />
+                  <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/kh.png" alt="Khmer" class="w-5 h-5 mr-2" />
                   Khmer
                 </a>
               </div>
@@ -172,9 +172,9 @@
         <div class="slideshow-container max-w-screen-xl mx-auto">
           <!-- Slides -->
           <div id="slideshow-track" class="slideshow-track">
-            <img src="/img/slide1.webp" class="slideshow-image" alt="Slide 1" />
-            <img src="/img/slide2.webp" class="slideshow-image" alt="Slide 2" />
-            <img src="/img/slide3.webp" class="slideshow-image" alt="Slide 3" />
+            <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/slide1.webp" class="slideshow-image" alt="Slide 1" />
+            <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/slide2.webp" class="slideshow-image" alt="Slide 2" />
+            <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/slide3.webp" class="slideshow-image" alt="Slide 3" />
           </div>
 
           <!-- Navigation Buttons -->
@@ -242,10 +242,10 @@
         <!-- POPULAR Card 1 -->
         <a
           href="/mobile-legends"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
+          class="w-[100%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
         >
           <img
-            src="/img/icon/mlbb.png"
+            src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/icon/mlbb.png"
             alt="Mobile Legends"
             class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
           />
@@ -263,10 +263,10 @@
         <!-- POPULAR Card 2 -->
         <a
           href="/honor-of-kings"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
+          class="w-[100%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
         >
           <img
-            src="/img/icon/hok.png"
+            src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/icon/hok.png"
             alt="Honor Of Kings"
             class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
           />
@@ -284,10 +284,10 @@
         <!-- POPULAR Card 3 -->
         <a
           href="/pubg-mobile"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
+          class="w-[100%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
         >
           <img
-            src="/img/icon/pubgm.png"
+            src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/icon/pubgm.png"
             alt="PUBG Mobile"
             class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
           />
@@ -305,190 +305,16 @@
         <!-- POPULAR Card 4 -->
         <a
           href="/free-fire"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
+          class="w-[100%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
         >
           <img
-            src="/img/icon/ff.png"
+            src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/icon/ff.png"
             alt="Free Fire"
             class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
           />
           <header class="flex-grow">
             <h2 class="text-white text-lg font-semibold">Free Fire</h2>
             <p class="text-gray-400">Sigapore (Cambodia)</p>
-          </header>
-          <button
-            class="bg-gray-500 hover:bg-slate-300 text-gray-200 hover:text-gray-800 px-4 py-2 rounded-lg"
-          >
-            Top Up
-          </button>
-        </a>
-      </article>
-      <article
-        class="flex flex-wrap justify-center gap-4 p-4 w-full max-w-[1280px] mx-auto"
-      >
-        <h3 class="w-full text-3xl text-white font-extrabold">
-          <i class="bi bi-fire"></i> DIRECT TOPUP
-        </h3>
-
-        <!-- DIRECT TOPUP Card 1 -->
-        <a
-          href="/genshin-impact"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
-        >
-          <img
-            src="/img/icon/gi.png"
-            alt="Genshin Impact"
-            class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
-          />
-          <header class="flex-grow">
-            <h2 class="text-white text-lg font-semibold">Genshin Impact</h2>
-            <p class="text-gray-400">Global</p>
-          </header>
-          <button
-            class="bg-gray-500 hover:bg-slate-300 text-gray-200 hover:text-gray-800 px-4 py-2 rounded-lg"
-          >
-            Top Up
-          </button>
-        </a>
-
-        <!-- DIRECT TOPUP Card 2 -->
-        <a
-          href="/sausage-man"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
-        >
-          <img
-            src="/img/icon/sm.png"
-            alt="Sausage Man"
-            class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
-          />
-          <header class="flex-grow">
-            <h2 class="text-white text-lg font-semibold">Sausage Man</h2>
-            <p class="text-gray-400">Global</p>
-          </header>
-          <button
-            class="bg-gray-500 hover:bg-slate-300 text-gray-200 hover:text-gray-800 px-4 py-2 rounded-lg"
-          >
-            Top Up
-          </button>
-        </a>
-
-        <!-- DIRECT TOPUP Card 3 -->
-        <a
-          href="/clash-of-clans"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
-        >
-          <img
-            src="/img/icon/coc.png"
-            alt="Clash Of Clans"
-            class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
-          />
-          <header class="flex-grow">
-            <h2 class="text-white text-lg font-semibold">Clash Of Clans</h2>
-            <p class="text-gray-400">Global</p>
-          </header>
-          <button
-            class="bg-gray-500 hover:bg-slate-300 text-gray-200 hover:text-gray-800 px-4 py-2 rounded-lg"
-          >
-            Top Up
-          </button>
-        </a>
-
-        <!-- DIRECT TOPUP Card 4 -->
-        <a
-          href="/hayday"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
-        >
-          <img
-            src="/img/icon/hd.png"
-            alt="Hay Day"
-            class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
-          />
-          <header class="flex-grow">
-            <h2 class="text-white text-lg font-semibold">Hay Day</h2>
-            <p class="text-gray-400">Global</p>
-          </header>
-          <button
-            class="bg-gray-500 hover:bg-slate-300 text-gray-200 hover:text-gray-800 px-4 py-2 rounded-lg"
-          >
-            Top Up
-          </button>
-        </a>
-        <!-- DIRECT TOPUP Card 5 -->
-        <a
-          href="/clash-royale"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
-        >
-          <img
-            src="/img/icon/cr.png"
-            alt="Clash Royale"
-            class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
-          />
-          <header class="flex-grow">
-            <h2 class="text-white text-lg font-semibold">Clash Royale</h2>
-            <p class="text-gray-400">Global</p>
-          </header>
-          <button
-            class="bg-gray-500 hover:bg-slate-300 text-gray-200 hover:text-gray-800 px-4 py-2 rounded-lg"
-          >
-            Top Up
-          </button>
-        </a>
-
-        <!-- DIRECT TOPUP Card 6 -->
-        <a
-          href="/brawl-stars"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
-        >
-          <img
-            src="/img/icon/bs.png"
-            alt="Brawl Stars"
-            class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
-          />
-          <header class="flex-grow">
-            <h2 class="text-white text-lg font-semibold">Brawl Stars</h2>
-            <p class="text-gray-400">Global</p>
-          </header>
-          <button
-            class="bg-gray-500 hover:bg-slate-300 text-gray-200 hover:text-gray-800 px-4 py-2 rounded-lg"
-          >
-            Top Up
-          </button>
-        </a>
-
-        <!-- DIRECT TOPUP Card 7 -->
-        <a
-          href="/farlight84"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
-        >
-          <img
-            src="/img/icon/fl84.png"
-            alt="Farlight84"
-            class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
-          />
-          <header class="flex-grow">
-            <h2 class="text-white text-lg font-semibold">Farlight84</h2>
-            <p class="text-gray-400">Global</p>
-          </header>
-          <button
-            class="bg-gray-500 hover:bg-slate-300 text-gray-200 hover:text-gray-800 px-4 py-2 rounded-lg"
-          >
-            Top Up
-          </button>
-        </a>
-
-        <!-- DIRECT TOPUP Card 8 -->
-        <a
-          href="/wild-rift"
-          class="w-[95%] xl:w-[calc(50%-0.5rem)] bg-gray-700 hover:bg-gray-600 border-2 border-gray-500 hover:border-gray-200 rounded-3xl p-2 flex items-center transition-transform duration-300 ease-in-out transform hover:scale-105"
-        >
-          <img
-            src="/img/icon/lol.png"
-            alt="Wild Rift"
-            class="rounded-2xl mr-4 w-[75px] w-md-[100px] transition-transform duration-300 ease-in-out hover:scale-115"
-          />
-          <header class="flex-grow">
-            <h2 class="text-white text-lg font-semibold">Wild Rift</h2>
-            <p class="text-gray-400">Global</p>
           </header>
           <button
             class="bg-gray-500 hover:bg-slate-300 text-gray-200 hover:text-gray-800 px-4 py-2 rounded-lg"
@@ -511,11 +337,11 @@
         <div class="w-full md:w-[calc(50%-0.5rem)] text-white">
           <h3 class="text-3xl mb-5 text-white">Payment Methods:</h3>
           <li class="flex items-center w-full">
-            <img src="/img/icon/khqr.webp" alt="KHQR" class="w-[73px] h-[30px] rounded-md mx-1">
-            <img src="/img/icon/aba.png" alt="ABA" class="w-[48px] h-[30px] rounded-md mx-1">
-            <img src="/img/icon/acleda.png" alt="Acleda" class="w-[40px] h-[30px] rounded-md mx-1">
-            <img src="/img/icon/truemoney.png" alt="True Money" class="w-[40px] h-[30px] rounded-md mx-1">
-            <img src="/img/icon/wing.png" alt="Wing" class="w-[40px] h-[30px] rounded-md mx-1">
+            <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/icon/khqr.webp" alt="KHQR" class="w-[73px] h-[30px] rounded-md mx-1">
+            <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/icon/aba.png" alt="ABA" class="w-[48px] h-[30px] rounded-md mx-1">
+            <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/icon/acleda.png" alt="Acleda" class="w-[40px] h-[30px] rounded-md mx-1">
+            <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/icon/truemoney.png" alt="True Money" class="w-[40px] h-[30px] rounded-md mx-1">
+            <img src="https://raw.githubusercontent.com/lyheangg/src/refs/heads/main/icon/wing.png" alt="Wing" class="w-[40px] h-[30px] rounded-md mx-1">
           </li>
         </div>
       </section>
@@ -526,7 +352,7 @@
           <script>
             document.write(new Date().getFullYear());
           </script>
-          darkblaze.com. All right reserved by Blaze Store.
+          www.darkblazestore.com All right reserved by Blaze Store.
         </p>
       </div>
     </footer>
